<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_Toast">Correct</string>
    <string name="false_toast">Incorrect</string>
    <string name="next_Button">Next</string>
    <string name="prev_Button">Previous</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="cheat_message">Cheat</string>
    <string name="cheat_warning">Are you sure you want to do this?</string>
    <string name="show_answer">Show Answer</string>
    <string name="judgement_toast">Cheating is Wrong.</string>
    <string name="restart_button">Restart Quiz</string>
</resources>
