<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical|center_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ques_ans_textView"
        android:textSize="20sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="250dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/true_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="trueButtonClicked"
            android:text="@string/true_button"/>

        <Button
            android:id="@+id/false_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="falseButtonClicked"
            android:text="@string/false_button" />
    </LinearLayout>
    <Button
        android:id="@+id/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheat_message"
        android:layout_marginLeft="148dp"
        android:onClick="OnCheatButtonClick"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="148dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_Button"
            android:onClick="onNextClick"/>
    </LinearLayout>
    <Button
        android:id="@+id/restart_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="148dp"
        android:text="@string/restart_button"
        android:onClick="onRestartClick"/>


</LinearLayout>